--- a/WatchMovieGN-Movie/src/main/resources/application.properties
+++ b/WatchMovieGN-Movie/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://localhost:3306/watchmoviegn
+spring.datasource.username=watchmoviegn
+spring.datasource.password=watchmoviegn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-security.basic.enabled=false
-management.security.enabled=false
