--- a/WatchMovieGN-Movie/pom.xml
+++ b/WatchMovieGN-Movie/pom.xml
@@ -93,7 +93,11 @@
 			<version>2.9.2</version>
 		</dependency>
 		-->
-	</dependencies>>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+	</dependencies>
 
 
 	<build>
