--- a/WatchMovieGN-Movie/src/main/resources/application.properties
+++ b/WatchMovieGN-Movie/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/watchmoviegn
 spring.datasource.username=watchmoviegn
 spring.datasource.password=watchmoviegn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
 
