--- a/WatchMovieGN-Movie/pom.xml
+++ b/WatchMovieGN-Movie/pom.xml
@@ -141,9 +141,17 @@
 
 
 		<dependency>
-			<groupId>org.springframework.data</groupId>
+			<groupId>
+				org.springframework.data</groupId>
 			<artifactId>spring-data-elasticsearch</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
