--- a/WatchMovieGN-Movie/src/main/resources/application.properties
+++ b/WatchMovieGN-Movie/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.profiles.active=@spring.profiles.active@
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #---
 #spring.config.activate.on-profile=dev
-#spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/watchmoviegn
 #spring.datasource.username=watchmoviegn
 #spring.datasource.password=watchmoviegn
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
+
 
 #---
 #spring.config.activate.on-profile=prod
