--- a/WatchMovieGN-FE/watchmoviegn-admin/package.json
+++ b/WatchMovieGN-FE/watchmoviegn-admin/package.json
@@ -44,6 +44,7 @@
     "@iconify/react": "^4.1.0",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
+    "@mui/x-data-grid": "^6.6.0",
     "@reduxjs/toolkit": "^1.9.5",
     "apexcharts": "^3.37.0",
     "axios": "^1.4.0",
