--- a/JavaProgramingTest/pom.xml
+++ b/JavaProgramingTest/pom.xml
@@ -51,6 +51,21 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.openimaj/xuggle-video -->
+		<dependency>
+			<groupId>org.openimaj</groupId>
+			<artifactId>xuggle-video</artifactId>
+			<version>1.3.10</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.openimaj/image-local-features -->
+		<dependency>
+			<groupId>org.openimaj</groupId>
+			<artifactId>image-local-features</artifactId>
+			<version>1.3.10</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
