--- a/WatchMovieGN-Movie/src/main/resources/application.properties
+++ b/WatchMovieGN-Movie/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging.level.org.springframework=TRACE 
-logging.level.com.baeldung=TRACE
+#logging.level.org.springframework=TRACE 
+#logging.level.com.baeldung=TRACE
 
 #---
 #spring.config.activate.on-profile=dev
