--- a/WatchMovieGN-BE/WatchMovieGN-Movie/Dockerfile
+++ b/WatchMovieGN-BE/WatchMovieGN-Movie/Dockerfile
@@ -8,7 +8,7 @@ COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 # clean up the file
 RUN sed -i 's/\r$//' ./mvnw
-RUN ./mvnw dependency:resolve
+RUN ./mvnw dependency:resolve -Pdev
 
 COPY src ./src
 
