--- a/WatchMovieGN-BE/WatchMovieGN-Movie/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Movie/pom.xml
@@ -151,9 +151,13 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<resources>
