Implement RabbitMq: In-process

--- a/WatchMovieGN-BE/WatchMovieGN-Premium/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Premium/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>watch.movie.gn</groupId>
+			<artifactId>WatchMovieGN-Util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
