--- a/WatchMovieGN-BE/WatchMovieGN-Parent/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/pom.xml
@@ -23,8 +23,8 @@
 	<modules>
 		<module>../WatchMovieGN-Util</module>
 	</modules>
-	
-		<profiles>
+
+	<profiles>
 		<profile>
 			<id>dev</id>
 			<activation>
@@ -79,7 +79,15 @@
 		<artifactId>springfox-bean-validators</artifactId>
 		<version>2.9.2</version>
             </dependency>
-            -->
+        -->
+
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
