--- a/WatchMovieGN-BE/WatchMovieGN-User/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-User/pom.xml
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>watch.movie.gn</groupId>
-			<artifactId>WatchMovieGN-Util</artifactId>
+			<artifactId>WatchMovieGN-Util-Module</artifactId>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
