--- a/WatchMovieGN-BE/WatchMovieGN-Premium/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Premium/pom.xml
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>watch.movie.gn</groupId>
-			<artifactId>WatchMovieGN-Util</artifactId>
+			<artifactId>WatchMovieGN-Util-Module</artifactId>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
