Implement WatchMovieGN-User

--- a/WatchMovieGN-BE/WatchMovieGN-Movie/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-Movie/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.profiles.active=@spring.profiles.active@
+spring.application.name=@project.artifactId@
 spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.context-path=/movie
-spring.application.name=@project.artifactId@
+server.port=@WatchMovieGN-Movie.port@
+
+
 
 
 #logging.level.org.springframework=TRACE 
