--- a/WatchMovieGN-BE/WatchMovieGN-Search/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-Search/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.profiles.active=@spring.profiles.active@
-spring.main.allow-bean-definition-overriding=true
-server.port=8081
-server.servlet.context-path=/search
 spring.application.name=@project.artifactId@
+spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=@spring.profiles.active@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.servlet.context-path=/movie
+server.port=@WatchMovieGN-Search.port@
 
 #logging.level.org.springframework=TRACE 
 #logging.level.com.baeldung=TRACE
