--- a/WatchMovieGN-BE/WatchMovieGN-User/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-User/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.application.name=@project.artifactId@
+spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=@spring.profiles.active@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.servlet.context-path=/movie
+server.port=@WatchMovieGN-User.port@
