--- a/WatchMovieGN-docker-compose/docker-compose.yml
+++ b/WatchMovieGN-docker-compose/docker-compose.yml
@@ -8,9 +8,12 @@ volumes:
 networks:
   local-nextwork:
 services:
-  watchmoviegn-movie:
-    container_name: watchmoviegn-movie
-    image: gaonet567/watchmoviegn-movie
+  watchmoviegn-gateway:
+    container_name: watchmoviegn-gateway
+    build: 
+      context: ..\WatchMovieGN-BE\WatchMovieGN-GateWay
+      dockerfile: Dockerfile
+    image: gaonet567/watchmoviegn-gateway
     networks:
       - local-nextwork
     ports:
@@ -18,6 +21,31 @@ services:
     depends_on:
       - elasticsearch
       - mysql
+      - rabbitmq
+  watchmoviegn-movie:
+    container_name: watchmoviegn-movie
+    build:
+      context: ..\WatchMovieGN-BE\WatchMovieGN-Movie
+      dockerfile: Dockerfile
+    image: gaonet567/watchmoviegn-movie
+    networks:
+      - local-nextwork
+    ports:
+      - 8081:8081
+    depends_on:
+      - watchmoviegn-gateway
+  watchmoviegn-search:
+    container_name: watchmoviegn-search
+    build:
+      context: ..\WatchMovieGN-BE\WatchMovieGN-Search
+      dockerfile: Dockerfile
+    image: gaonet567/watchmoviegn-movie
+    networks:
+      - local-nextwork
+    ports:
+      - 8084:8084
+    depends_on:
+      - watchmoviegn-gateway
   watchmoviegn-admin:
     container_name: watchmoviegn-admin
     image: gaonet567/watchmoviegn-admin
@@ -43,7 +71,7 @@ services:
       MYSQL_PASSWORD: watchmoviegn
       MYSQL_DATABASE: watchmoviegn
   elasticsearch:
-    container_name: es-container
+    container_name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.1
     environment:
       - xpack.security.enabled=false
@@ -55,7 +83,7 @@ services:
     volumes:
       - volume-elasticsearch:/usr/share/elasticsearch/config/certs
   kibana:
-    container_name: kb-container
+    container_name: kibana
     image: docker.elastic.co/kibana/kibana:8.9.1
     environment:
       - ELASTICSEARCH_HOSTS=http://es-container:9200
