--- a/WatchMovieGN-docker-compose/docker-compose.yml
+++ b/WatchMovieGN-docker-compose/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       MYSQL_DATABASE: watchmoviegn
   elasticsearch:
     container_name: elasticsearch
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.1
+    image: elasticsearch:8.11.0
     environment:
       - xpack.security.enabled=false
       - "discovery.type=single-node"
@@ -84,7 +84,7 @@ services:
       - volume-elasticsearch:/usr/share/elasticsearch/config/certs
   kibana:
     container_name: kibana
-    image: docker.elastic.co/kibana/kibana:8.9.1
+    image: kibana:8.11.0
     environment:
       - ELASTICSEARCH_HOSTS=http://es-container:9200
     networks:
