--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>${WatchMovieGN-Util-Module.name}</module>
         <module>${WatchMovieGN-RabbitMq-Module.name}</module>
+        <module>${WatchMovieGN-Security-Module.name}</module>
     </modules>
 
     <build>
