--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>${WatchMovieGN-RabbitMq-Module.name}</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>${WatchMovieGN-Security-Module.name}</artifactId>
+        </dependency>
+
         <!-- End WatchMovieGN dependency -->
 
         <dependency>
