--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Security-Module/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Security-Module/pom.xml
@@ -20,11 +20,17 @@
             <artifactId>${WatchMovieGN-Util-Module.name}</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>WatchMovieGN-RabbitMq-Module</artifactId>
+        </dependency>
+
         <!-- End WatchMovieGN dependency -->
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+
     </dependencies>
 </project>
