--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Security-Module/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Security-Module/pom.xml
@@ -32,5 +32,15 @@
             <artifactId>spring-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
