--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Util-Module/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-Util-Module/pom.xml
@@ -34,9 +34,15 @@
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
 
     </dependencies>
