--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-User-Webservice/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-User-Webservice/pom.xml
@@ -18,14 +18,22 @@
     <properties></properties>
     <dependencies>
         <!-- Start WatchMovieGN dependency -->
+
         <dependency>
             <groupId>watch.movie.gn</groupId>
             <artifactId>${WatchMovieGN-Util-Module.name}</artifactId>
         </dependency>
+
         <dependency>
             <groupId>watch.movie.gn</groupId>
-            <artifactId>WatchMovieGN-RabbitMq-Module</artifactId>
+            <artifactId>${WatchMovieGN-RabbitMq-Module.name}</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>${WatchMovieGN-Security-Module.name}</artifactId>
+        </dependency>
+
         <!-- End WatchMovieGN dependency -->
 
         <dependency>
