--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-GateWay-Webservice/src/main/resources/application.yml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-GateWay-Webservice/src/main/resources/application.yml
@@ -1,11 +1,19 @@
-server:
-  port: 8999
-
-
 #Spring cloud
 spring:
+  application:
+    name: @project.artifactId@
   cloud:
     config:
       enabled: false
+    gateway:
+      discovery:
+        locator:
+          enabled: true
   main:
     web-application-type: reactive
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+server:
+  port: 8999
