--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-spring.application.name=@project.artifactId@
+spring.application.name=movieservice
 spring.main.allow-bean-definition-overriding=true
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+
 server.servlet.context-path=/movieservice
 server.port=@WatchMovieGN-Movie.port@
 
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
-
+#spring.cloud.service-registry.auto-registration.enabled=false
+#eureka.client.enabled=false
+#eureka.client.serviceUrl.registerWithEureka=false
 
 #logging.level.org.springframework=TRACE 
 #logging.level.com.baeldung=TRACE
