add new module EurekaClient

--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-RabbitMq-Module/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/WatchMovieGN-RabbitMq-Module/pom.xml
@@ -11,8 +11,9 @@
     </parent>
 
     <artifactId>${WatchMovieGN-RabbitMq-Module.name}</artifactId>
-    <packaging>jar</packaging>
+    <version>${WatchMovieGN-RabbitMq-Module.version}</version>
     <name>${WatchMovieGN-RabbitMq-Module.name}</name>
+    <packaging>jar</packaging>
 
     <properties></properties>
 
