--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Module-Parent/pom.xml
@@ -20,6 +20,7 @@
         <module>${WatchMovieGN-Util-Module.name}</module>
         <module>${WatchMovieGN-RabbitMq-Module.name}</module>
         <module>${WatchMovieGN-Security-Module.name}</module>
+        <module>${WatchMovieGN-EurekaClient-Module.name}</module>
     </modules>
 
     <build>
