--- a/WatchMovieGN-BE/WatchMovieGN-Parent/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/pom.xml
@@ -31,8 +31,11 @@
         <WatchMovieGN-Security-Module.name>WatchMovieGN-Security-Module</WatchMovieGN-Security-Module.name>
         <WatchMovieGN-Security-Module.version>0.0.1-SNAPSHOT</WatchMovieGN-Security-Module.version>
 
+        <WatchMovieGN-EurekaClient-Module.name>WatchMovieGN-EurekaClient-Module</WatchMovieGN-EurekaClient-Module.name>
+        <WatchMovieGN-EurekaClient-Module.version>0.0.1-SNAPSHOT</WatchMovieGN-EurekaClient-Module.version>
+
         <!-- NAME WEBSERVICE -->
-        <WatchMovieGN-Eureka.name>WatchMovieGN-Eureka-Webservice</WatchMovieGN-Eureka.name>
+        <WatchMovieGN-EurekaServer.name>WatchMovieGN-EurekaServer-Webservice</WatchMovieGN-EurekaServer.name>
         <WatchMovieGN-GateWay.name>WatchMovieGN-GateWay-Webservice</WatchMovieGN-GateWay.name>
         <WatchMovieGN-Movie.name>WatchMovieGN-Movie-Webservice</WatchMovieGN-Movie.name>
         <WatchMovieGN-Premium.name>WatchMovieGN-Premium-Webservice</WatchMovieGN-Premium.name>
@@ -109,6 +112,12 @@
                 <groupId>watch.movie.gn</groupId>
                 <artifactId>${WatchMovieGN-Security-Module.name}</artifactId>
                 <version>${WatchMovieGN-Security-Module.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>watch.movie.gn</groupId>
+                <artifactId>${WatchMovieGN-EurekaClient-Module.name}</artifactId>
+                <version>${WatchMovieGN-EurekaClient-Module.version}</version>
             </dependency>
 
             <dependency>
