--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Search-Webservice/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Search-Webservice/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.main.allow-bean-definition-overriding=true
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 server.servlet.context-path=/searchservice
 server.port=@WatchMovieGN-Search.port@
 
-#logging.level.org.springframework=TRACE 
-#logging.level.com.baeldung=TRACE
+watch.movie.gn.eureka.server.servlet.context-path=@WatchMovieGN-Eureka.context-path@
+watch.movie.gn.eureka.server.servlet.port=@WatchMovieGN-Eureka.port@
+
+logging.level.org.springframework=TRACE 
+logging.level.com.baeldung=TRACE
