--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-EurekaServer-Webservice/src/main/resources/application.properties
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-EurekaServer-Webservice/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=@project.artifactId@
-server.port=@WatchMovieGN-Eureka.port@
 spring.main.allow-bean-definition-overriding=true
 spring.profiles.active=@spring.profiles.active@
+
+server.port=@WatchMovieGN-Eureka.port@
+
+logging.level.org.springframework=TRACE 
+logging.level.com.baeldung=TRACE
+
 
 # eureka by default will register itself as a client. So, we need to set it to false.
 # What's a client server? See other microservices (image, gallery, auth, etc).
