--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-Movie-Webservice/pom.xml
@@ -20,17 +20,22 @@
         <!-- Start WatchMovieGN dependency -->
         <dependency>
             <groupId>watch.movie.gn</groupId>
-            <artifactId>${WatchMovieGN-Util-Module.name}</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>watch.movie.gn</groupId>
-            <artifactId>${WatchMovieGN-RabbitMq-Module.name}</artifactId>
+            <artifactId>WatchMovieGN-Util-Module</artifactId>
         </dependency>
 
         <dependency>
             <groupId>watch.movie.gn</groupId>
             <artifactId>${WatchMovieGN-Security-Module.name}</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>${WatchMovieGN-Database-Module.name}</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>${WatchMovieGN-EurekaClient-Module.name}</artifactId>
         </dependency>
 
         <!-- End WatchMovieGN dependency -->
@@ -89,15 +94,15 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-
     </dependencies>
     <build>
         <finalName>${WatchMovieGN-Movie.name}</finalName>
