--- a/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-User-Webservice/pom.xml
+++ b/WatchMovieGN-BE/WatchMovieGN-Parent/WatchMovieGN-Webservice-Parent/WatchMovieGN-User-Webservice/pom.xml
@@ -18,12 +18,6 @@
     <properties></properties>
     <dependencies>
         <!-- Start WatchMovieGN dependency -->
-
-        <dependency>
-            <groupId>watch.movie.gn</groupId>
-            <artifactId>${WatchMovieGN-Util-Module.name}</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>watch.movie.gn</groupId>
             <artifactId>${WatchMovieGN-RabbitMq-Module.name}</artifactId>
@@ -90,8 +84,20 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>watch.movie.gn</groupId>
+            <artifactId>WatchMovieGN-Database-Module</artifactId>
         </dependency>
 
     </dependencies>
